Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17573

Binary editor tooltip does not pop up for last column

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.6.0-rc1
    • Qt Creator 4.2.0
    • Editors
    • None
    • Windows

    Description

      When editing a binary file with the binary editor (via file->open with) the tooltip (showing the value interpretation on the selected hex values) on the last column does not pop up.

      First of all:
      The tooltip over the selected hex values only pop up, if you move the cursor in the selected area after you have released the mouse button after selection and then stop moving in the selection.

      1. load file
      2. select hex value in last column (16 column)
      3. move the cursor in the selected hex value
      4. stop moving in the hex value and wait for tooltip.... it does not pop up.

      Do the same for hex values at position 1 to 15 ... there it works.

      And now the wired thing: Move the cursor to the left of the selection and wait ther with not movement: here the popup will be shown....

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-17573
        # Subject Branch Project Status CR V

        Activity

          People

            con Eike Ziller
            moellney Michael Möllney
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes